--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "Alexander L. Hayes Computer Science Ph.D. Student at the Universit
 logo: # 120x120 px default image used for Twitter summary card
 teaser: # 400x250 px default teaser image used in image archive grid
 locale: en
-url: http://localhost:4000
+url: https://hayesall.com
 feed:
   path: atom.xml
 
